@startuml
package modelo {
  class Venta {
    +realizar(): void
    +cancelar(): void
    +listar(): List<Venta>
  }

  class Cliente
}

package controller {
  class VentaController {
    -venta: Venta
    +realizarVenta(): void
    +cancelarVenta(): void
    +listarVentas(): void
  }

  VentaController --> Venta
}

package view {
  class VentaView {
    +mostrarFormularioVenta(): void
    +mostrarListadoVentas(): void
    +mostrarMensaje(mensaje: String): void
  }

  VentaView --> VentaController : invoca
  VentaController --> VentaView : actualiza
}
@enduml
